optimizations fixes new systems